<resources>
    <string name="app_name">My Apartment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Wrong username or password"</string>
    <string name="login_failed_wrong_credentials">"Wrong username or password"</string>
    <string name="login_success">"success"</string>

    <!--    Login and registration-->
    <string name="appTitle">My Apartment</string>
    <string name="createAccountTxt">Create Account</string>
    <string name="loginTxt1">Log in</string>
    <string name="loginTxt2">Login</string>
    <string name="loginTxt3">Log In</string>
    <string name="trouble">Having Trouble?</string>
    <string name="userName">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="firstName">FIRST NAME</string>
    <string name="lastName">LAST NAME</string>
    <string name="building">BUILDING</string>
    <string name="unit">UNIT</string>
    <string name="room">ROOM</string>
    <string name="continueTxt">Continue</string>
    <string name="haveAccount">Have an account?</string>
    <string name="emailProvideMsg">Please provide the email address that will be tied to your account.</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="emailNotFoundError">We didn\'t find the email address in our system. Please enter the email address that was used for your welcome email.</string>
    <string name="validationCodeCheckMsg">Please check your email for a six digit validation code. Paste that code below to continue your account registration.</string>
    <string name="validationCodeEnter">ENTER VALIDATION CODE</string>
    <string name="validationCodeResend">Resend code</string>
    <string name="passwordHint">(must be at least 6 characters)</string>
    <string name="passwordRetype">RE-TYPE PASSWORD</string>
    <string name="finishTxt">Finish</string>

    <!-- menu -->
    <string name="myProfileTxt">My Profile</string>
    <string name="myApartmentTxt">My Apartment</string>
    <string name="aboutTxt">About</string>
    <string name="helpTxt">Help</string>
    <string name="logoutTxt">Logout</string>
    <string name="location">Location</string>

    <!-- Help -->
    <string name="connWifiTxt">How fast is the Internet connection at my property?</string>
    <string name="addGuestTxt">Adding guests</string>
    <string name="addingDeviceTxt">Adding devices</string>
    <string name="doorsLocksTxt">Doors and locks</string>
    <string name="lightsFansTxt">Lights and fans</string>
    <string name="thermostatTxt">Thermostat</string>
    <string name="tvGuideTxt">Channel Lineup</string>
    <string name="accountTxt">Account</string>

    <string name="saveButtonTxt">Save</string>
    <string name="phone">PHONE</string>
    <string name="changePassTxt">Change password</string>

    <string name="stillHaveTroubleTitleTxt">Still having trouble?</string>


    <!--    About-->
    <string name="myApartmentAbout">My Apartment</string>
    <string name="MyApartmentVersion">2.0.1</string>
    <string name="PoweredBy">POWERED BY</string>
    <string name="resetApp">Reset App</string>
    <string name="giveFeedback">Give feedback</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="usePolicy">Acceptable use policy</string>
    <string name="needHelp">Need Help?</string>


    <!--    My Apartment-->
    <string name="yourInfo">YOUR INFORMATION</string>
    <string name="webSite">Website</string>
    <string name="propertyManager">PROPERTY MANAGER</string>
    <string name="officeHours">Office hours:</string>

    <!--    Homepage-->
    <string name="dashes">__</string>
    <string name="doors">Doors</string>
    <string name="door">Door</string>
    <string name="lights">Lights</string>
    <string name="light">Light</string>
    <string name="thermostats">Thermostats</string>
    <string name="thermostat">Thermostat</string>
    <string name="fans">Fans</string>
    <string name="fan">Fan</string>
    <string name="outlets">Outlets</string>
    <string name="outlet">Outlet</string>
    <string name="devices">Devices</string>
    <string name="tvGuide">Channel Lineup</string>
    <string name="notifications">Notifications</string>

    <string name="doorsAllLocked">ALL LOCKED</string>
    <string name="doorsAllUnlocked">ALL UNLOCKED</string>
    <string name="doorsLocked">LOCKED</string>
    <string name="doorsUnlocked">UNLOCKED</string>

    <string name="lightsAllOff">ALL OFF</string>
    <string name="lightsAllOn">ALL ON</string>
    <string name="lightsOff">OFF</string>
    <string name="lightsOn">ON</string>

    <string name="thermostatHolding">HOLDING AT</string>
    <string name="thermostatSet">SET TO</string>
    <string name="thermostatHeating">HEATING TO</string>
    <string name="thermostatCooling">COOLING TO</string>
    <string name="thermostatModeOff">OFF</string>
    <string name="thermostatModeHeat">HEAT</string>
    <string name="thermostatModeCool">COOL</string>

    <string name="thermostatHomeHolding">HOLDING AT</string>
    <string name="thermostatHomeHeating">HEATING</string>
    <string name="thermostatHomeCooling">COOLING</string>

    <string name="devicesTotal">TOTAL</string>

    <string name="locked">LOCKED</string>
    <string name="unlocked">UNLOCKED</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="imageContentDesc">Content description</string>
    <string name="people">People</string>
    <string name="usernameMissing">username</string>
    <string name="you">You</string>
    <string name="roommate">Roommate</string>

    <string name="commonIssues">COMMON ISSUES</string>
    <string name="gettingData">Getting data in progress</string>

    <string name="privateWifi">Private wifi</string>
    <string name="publicWifi">Public wifi</string>

    <string name="network">NETWORK</string>
    <string name="networkName">Network name</string>
    <string name="networkPasswordLabel">PASSWORD</string>
    <string name="networkPassword">Network password</string>
    <string name="sendSMS">Send SMS</string>
    <string name="sendEmail">Send Email</string>

    <string name="addDeviceDesc">Add</string>
    <string name="addDeviceTitle">Add a Device</string>
    <string name="macLabel">MAC ADDRESS</string>
    <string name="deviceNameLabel">DEVICE NAME</string>
    <string name="whereToFindLink">Where do I find this?</string>

    <string name="notificationTitle">Title</string>
    <string name="notificationTime">Time</string>


    <string name="doorsTileName">doors</string>
    <string name="lightsTileName">lights</string>
    <string name="thermostatsTileName">thermos</string>
    <string name="fansTileName">fans</string>
    <string name="outletsTileName">outlets</string>
    <string name="devicesTileName">devices</string>
    <string name="tvGuideTileName">tv</string>


    <string name="supportChat">Live Chat</string>
    <string name="supportCall">Call</string>
    <string name="supportEmail">Email</string>
    <string name="supportClose">Close</string>

</resources>
