<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background"
    tools:context=".ui.create_account.information.AccountInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvMyApartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/appTitle"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/gibson_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_marginTop="6dp"
        android:text="@string/createAccount"
        style="@style/labels"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMyApartment" />


    <TextView
        android:id="@+id/tvFirstName"
        style="@style/labels"
        android:layout_marginTop="50dp"
        android:text="@string/firstName"
        app:layout_constraintStart_toStartOf="@+id/etFirstName"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

    <TextView
        android:id="@+id/tvLastName"
        style="@style/labels"
        android:text="@string/lastName"
        app:layout_constraintStart_toStartOf="@+id/etLastName"
        app:layout_constraintTop_toTopOf="@+id/tvFirstName" />

    <EditText
        android:id="@+id/etFirstName"
        style="@style/textFields"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintHorizontal_weight="1"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

    <EditText
        android:id="@+id/etLastName"
        style="@style/textFields"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintHorizontal_weight="1"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

    <TextView
        android:id="@+id/tvBuilding"
        style="@style/labels"
        android:layout_marginTop="60dp"
        android:text="@string/building"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/textFields"
        android:layout_marginEnd="23.5dp"
        android:layout_marginStart="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBuilding" />

    <TextView
        android:id="@+id/tvUnit"
        style="@style/labels"
        android:layout_marginTop="58dp"
        android:text="@string/unit"
        app:layout_constraintStart_toStartOf="@+id/etUnit"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/tvRoom"
        style="@style/labels"
        android:text="@string/room"
        app:layout_constraintStart_toStartOf="@+id/etRoom"
        app:layout_constraintTop_toTopOf="@+id/tvUnit" />

    <EditText
        android:id="@+id/etUnit"
        style="@style/textFields"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="9dp"
        android:inputType="text"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/etRoom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUnit" />

    <EditText
        android:id="@+id/etRoom"
        style="@style/textFields"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="23dp"
        android:inputType="text"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etUnit"
        app:layout_constraintTop_toBottomOf="@+id/tvRoom" />

    <Button
        android:id="@+id/buContinue"
        style="@style/buttons"
        android:layout_marginTop="70dp"
        android:onClick="continueClickEvent"
        android:text="@string/continueTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUnit" />

        <LinearLayout
            android:layout_width="258dp"
            android:layout_height="22dp"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buContinue"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/haveAccount"
                android:textColor="@color/black2" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:onClick="goToLogin"
                android:text="@string/loginTxt3"
                android:textColor="@color/txtDarkBlue" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>