<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background"
    tools:context=".ui.create_account.email.EmailCheckerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMyApartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/gibson_semi_bold"
                android:text="@string/appTitle"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCreateAccount"
                style="@style/labels"
                android:layout_marginTop="6dp"
                android:text="@string/createAccount"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMyApartment" />

            <TextView
                android:id="@+id/tvEmailNote"
                style="@style/descriptions"
                android:layout_height="102dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="25dp"
                android:text="@string/emailProvideMsg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/labels"
                android:layout_marginTop="24dp"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailNote" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/textFields"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="23dp"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.697"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

            <Button
                android:id="@+id/buContinue"
                style="@style/buttons"
                android:layout_marginTop="166dp"
                android:onClick="continueClickEvent"
                android:text="@string/continueTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <LinearLayout
                android:layout_width="258dp"
                android:layout_height="22dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buContinue"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haveAccount"
                    android:textColor="@color/black2" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:onClick="goToLogin"
                    android:text="@string/loginTxt3"
                    android:textColor="@color/txtDarkBlue" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</RelativeLayout>